--- a/web/index.html
+++ b/web/index.html
@@ -8,18 +8,23 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="scaffolded-by" content="https://github.com/google/stagehand">
-    <title>untitled</title>
+    <meta name="scaffolded-by" content="https://github.com/google/stagehand">-->
+    <title>ARKANOID</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="main.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>
+   <!-- <script defer src="main2.dart" type="application/dart"></script>
+    <script defer src="packages/browser/dart.js"></script>-->
 </head>
 
 <body>
 
-    <canvas id="stage" class="stage--fullscreen"></canvas>
+    <div class="container onload">
+        <p class="onload">LOADING...</p>
+        <div class="bar onload"></div>
+    </div>
+
+   <!-- <canvas id="stage" class="stage&#45;&#45;fullscreen"></canvas>-->
 
 </body>
 </html>
