--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,13 @@
 
     <div class="container onload">
         <p class="onload">LOADING...</p>
-        <div class="bar onload"></div>
+        <div class="bar onload">
+            <div class="rect onload"></div>
+            <div class="rect onload"></div>
+            <div class="rect onload"></div>
+            <div class="rect onload"></div>
+            <div class="rect onload"></div>
+        </div>
     </div>
 
    <!-- <canvas id="stage" class="stage&#45;&#45;fullscreen"></canvas>-->
