--- a/web/index.html
+++ b/web/index.html
@@ -12,25 +12,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">-->
     <title>ARKANOID</title>
-    <link rel="stylesheet" href="styles.css">
-   <!-- <script defer src="main2.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>-->
+    <link rel="stylesheet" href="styles/onload.css">
+
 </head>
 
 <body>
 
-    <div class="container onload">
+    <div class="container-onload onload">
         <p class="onload">LOADING...</p>
         <div class="bar onload">
-            <div class="rect onload"></div>
-            <div class="rect onload"></div>
-            <div class="rect onload"></div>
-            <div class="rect onload"></div>
-            <div class="rect onload"></div>
+            <div class="rect r1 onload"></div>
+            <div class="rect r2 onload"></div>
+            <div class="rect r3 onload"></div>
+            <div class="rect r4 onload"></div>
+            <div class="rect r5 onload"></div>
         </div>
     </div>
 
    <!-- <canvas id="stage" class="stage&#45;&#45;fullscreen"></canvas>-->
 
 </body>
+<script defer src="main2.dart" type="application/dart"></script>
+<script defer src="packages/browser/dart.js"></script>
 </html>
