--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+
+<!--
+  Copyright (c) 2017, loinasd. All rights reserved. Use of this source code
+  is governed by a BSD-style license that can be found in the LICENSE file.
+-->
+
 <html>
-  <head>
-    <script>
+<head>
+    <!--<script>
         // WARNING: DO NOT set the <base href> like this in production!
         // Details: https://webdev.dartlang.org/angular/guide/router
         (function () {
@@ -10,17 +16,33 @@
             var href = match ? match[0] : '/';
             document.write('<base href="' + href + '" />');
         }());
-    </script>
-
-    <title>untitled1</title>
+    </script>-->
+    <meta content="text/html">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ARKANOID</title>
+    <link rel="stylesheet" href="styles/onload.css">
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+
+</head>
+
+<body>
+    <onload-app>
+        <div class="container-onload">
+            <p class="onload">LOADING...</p>
+            <div class="bar onload">
+                <div class="rect r1"></div>
+                <div class="rect r2"></div>
+                <div class="rect r3"></div>
+                <div class="rect r4"></div>
+                <div class="rect r5"></div>
+            </div>
+        </div>
+    </onload-app>
+   <!-- <canvas id="stage" class="stage&#45;&#45;fullscreen"></canvas>-->
+
+</body>
+
 </html>
